--- a/index.html
+++ b/index.html
@@ -13,9 +13,25 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/styles/style.css"> 
+<link rel="stylesheet" href="./styles/reset.css">
+<link rel="stylesheet" href="./styles/style.css"> 
 </head>
 <body>
+  <header class="containner">
+    <nav class="nav">
+      <img class="logo" src="/images/logo.svg" alt="logo">
+      <ul class="list">
+        <li>Home</li>
+        <li>Fale conosco</li>
+        <li>Entrar</li>
+      </ul>
+    </nav>
+    
+  </header>
+  <main>
+    <img class="illustration-intro" src="/images/illustration-intro.png" alt="illustration-intro">
+    <h1 class="h1">Todos seus arquivos seguros contra ataques com a mais avançada segurança contra hackers.</h1>
+  </main>
 
 
   <footer>
