--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
   </header>
   <main>
-    <section class="sec">
+    <section class="containner">
     <img class="illustration-intro" src="/images/illustration-intro.png" alt="illustration-intro">
     <div>
     <h1 class="h1">Todos seus arquivos seguros contra ataques com a mais avançada segurança contra hackers.</h1>
@@ -37,7 +37,28 @@
   </div>
     <button class="button">Comece aqui !</button>   
   </section>
+
+  <section class="containner-2"> 
+    <ul class="list-2">
+      <img src="/images/icon-access-anywhere.svg" alt="computador">
+      <h3 class="h3">Acesse seus arquivos em qualquer lugar</h3>      
+      <li class="li">Você consigue acessar sesus arquivos pelo celula ,teblet ou desktop.</li>
+
+      <img src="/images/icon-security.svg" alt="Shild">
+      <h3 class="h3">A segurança que você pode confiar.</h3>     
+      <li class="li">Segurança 24 horas por dia com os profissionais mais capacitados do mercado.</li>
+
+      <img src="/images/icon-collaboration.svg" alt="Check">
+      <h3 class="h3">Segurança em compartilhamento de dados.</h3>     
+      <li class="li">Nossa segurança possui criptografia ponta a ponta.</li>
+
+      <img src="/images/icon-any-file.svg" alt="folder">
+      <h3 class="h3">Armazene qualquer coisa.</h3>      
+      <li class="li">Salve sesus dados sem medo de perde-los</li>
+    </ul>
+  </section>
   </main>
+  
 
 
   <footer>
