--- a/index.html
+++ b/index.html
@@ -50,15 +50,30 @@
 
       <img src="/images/icon-collaboration.svg" alt="Check">
       <h3 class="h3">Segurança em compartilhamento de dados.</h3>     
-      <li class="li">Nossa segurança possui criptografia ponta a ponta.</li>
+      <li class="li">Nossa segurança possui criptografia ponta a ponta , compartilhamento seguro e sem risco.</li>
 
       <img src="/images/icon-any-file.svg" alt="folder">
       <h3 class="h3">Armazene qualquer coisa.</h3>      
-      <li class="li">Salve sesus dados sem medo de perde-los</li>
+      <li class="li">Salve sesus dados sem medo de perde-los , nosso sitema de nuvem possui asmais novas tecnologias.</li>
     </ul>
   </section>
   </main>
-  
+  <section class="containner-3">
+    <img class="Photo" src="./images/illustration-stay-productive.png" alt="Photo">
+    <h2 class="h2">Fique comunicatinha onde estiver.</h2>
+    <p class="p"> O Guardium é uma solução de segurança de dados que pode se adaptar à medida 
+      que o ambiente de ameaças muda, fornecendo visibilidade, conformidade e proteção
+       completas em todo o ciclo de vida da segurança de dados. <br> <br>
+
+      A Fylo Security Guardium é uma plataforma de segurança de dados moderna e 
+      escalável, pronta para atender às demandas dos ambientes atuais em evolução. 
+      Ele protege dados confidenciais e regulamentados em vários ambientes de
+       nuvem ao mesmo tempo em que gerencia as obrigações de conformidade, 
+       descobrindo onde os dados confidenciais residem, criptografando e 
+       monitorando o que é importante e reduzindo o risco das respostas a ameaças.</p>
+    
+       <span class="sub">Veja como a Fylo funciona <img src="/images/icon-arrow.svg" alt="icon-arrow"></span>
+  </section>  
 
 
   <footer>
