--- a/index.html
+++ b/index.html
@@ -72,9 +72,16 @@
        descobrindo onde os dados confidenciais residem, criptografando e 
        monitorando o que é importante e reduzindo o risco das respostas a ameaças.</p>
     
-       <span class="sub">Veja como a Fylo funciona <img src="/images/icon-arrow.svg" alt="icon-arrow"></span>
+      
   </section>  
+  <span class="sub">Veja como a Fylo funciona <img src="/images/icon-arrow.svg" alt="icon-arrow"></span>
 
+  <section class="containner-4">
+    <h3 class="h3">Tenha acesso agora </h3>
+    <p class="p">Isso só vai levar um minuto , começando hoje o primeiro mês é gratis e cancela quando quiser .</p>
+    <input class="type" type="text" placeholder="Digite seu e-mail aqui">
+    <button class="button-2">Comece aqui !</button>  
+  </section>
 
   <footer>
    
