--- a/index.html
+++ b/index.html
@@ -40,22 +40,31 @@
 
   <section class="containner-2"> 
     <ul class="list-2">
+      <li>
       <img src="/images/icon-access-anywhere.svg" alt="computador">
       <h3 class="h3">Acesse seus arquivos em qualquer lugar</h3>      
-      <li class="li">Você consigue acessar sesus arquivos pelo celula ,teblet ou desktop.</li>
+      <p class="p"> class="li">Você consigue acessar sesus arquivos pelo celula ,teblet ou desktop.</p>
+      </li>
 
+      <li class="li">
       <img src="/images/icon-security.svg" alt="Shild">
       <h3 class="h3">A segurança que você pode confiar.</h3>     
-      <li class="li">Segurança 24 horas por dia com os profissionais mais capacitados do mercado.</li>
-
+      <p class="p"> Segurança 24 horas por dia com os profissionais mais capacitados do mercado.</p>
+      </li>
+       
+      <li class="li">
       <img src="/images/icon-collaboration.svg" alt="Check">
       <h3 class="h3">Segurança em compartilhamento de dados.</h3>     
-      <li class="li">Nossa segurança possui criptografia ponta a ponta , compartilhamento seguro e sem risco.</li>
+      <p class="p"> Nossa segurança possui criptografia ponta a ponta , compartilhamento seguro e sem risco.</p>
+      </li>
 
+      <li class="li">
       <img src="/images/icon-any-file.svg" alt="folder">
       <h3 class="h3">Armazene qualquer coisa.</h3>      
-      <li class="li">Salve sesus dados sem medo de perde-los , nosso sitema de nuvem possui asmais novas tecnologias.</li>
+      <p class="p">Salve sesus dados sem medo de perde-los , nosso sitema de nuvem possui asmais novas tecnologias.</p>
+      </li>
     </ul>
+
   </section>
   </main>
   <section class="containner-3">
