--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
   <section class="containner-2"> 
     <ul class="list-2">
-      <li>
+      <li class="li">
       <img src="/images/icon-access-anywhere.svg" alt="computador">
-      <h3 class="h3">Acesse seus arquivos em qualquer lugar</h3>      
-      <p class="p"> class="li">Você consigue acessar sesus arquivos pelo celula ,teblet ou desktop.</p>
+      <h3 class="h3">Acesse seus arquivos em qualquer lugar.</h3>      
+      <p class="p">Você consigue acessar sesus arquivos pelo celula ,teblet ou desktop.</p>
       </li>
 
       <li class="li">
