--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
         <h1 class="main_container-text">Todos seus arquivos seguros contra ataques com a <br> mais avançada segurança contra hackers.</h1>
         <p class="main_container-paragrafo">A nossa agência Fylo , possui as mas avançadas tecnologias <br> para proteger você sua família e sua empresa.</p>
       </div>
-      <div>
-        <a class="container-button">Comece aqui !</a> 
-        <input class="container-imput" type="text" placeholder="Digite aqui!">
+      <div class="main_div-button">
+        
+        <a class="main_container-button">Comece aqui !</a>        
       </div>
     </section>
   </main>
+
+  <script src="/app/script.js"></script>
 
 </body>
 </html>
