--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </header>
 
   <main>
-    <section class="container">
+    <section class="main-section">
       <img class="main_container-img" src="/images/illustration-intro.png" alt="ilustração">
       <div>
         <h1 class="main_container-text">Todos seus arquivos seguros contra ataques com a <br> mais avançada segurança contra hackers.</h1>
@@ -41,6 +41,69 @@
       </div>
     </section>
   </main>
+
+  <section class="servicos"> 
+    <div class="servicos_main-div">
+
+      <div class="servicos_main-div-grid">
+        <img class="servicos_main-div-img" src="/images/icon-access-anywhere.svg" alt="computador">
+        <h3 class="h3">Acesse seus arquivos em qualquer lugar.</h3>      
+        <p class="p">Você consigue acessar sesus arquivos pelo celula ,teblet ou desktop.</p>
+     </div>
+
+      <div  class="servicos_main-div-grid">
+        <img  class="servicos_main-div-img"src="/images/icon-security.svg" alt="Shild">
+        <h3 class="h3">A segurança que você pode confiar.</h3>     
+        <p class="p">Segurança 24 horas por dia com os profissionais mais capacitados do mercado.</p>
+      </div>
+       
+      <div  class="servicos_main-div-grid">
+        <img class="servicos_main-div-img" src="/images/icon-collaboration.svg" alt="Check">
+        <h3 class="h3">Segurança em compartilhamento de dados.</h3>     
+        <p class="p">Nossa segurança possui criptografia ponta a ponta , compartilhamento seguro e sem risco.</p>
+      </div>
+
+    <div  class="servicos_main-div-grid">
+      <img class="servicos_main-div-img" src="/images/icon-any-file.svg" alt="folder">
+      <h3 class="h3">Armazene qualquer coisa.</h3>      
+      <p class="p">Salve sesus dados sem medo de perde-los , nosso sitema de nuvem possui asmais novas tecnologias.</p>
+      </li>
+    </div>
+
+  </div>
+
+  </section>
+
+
+  <section class="produtividade">
+
+    <div class="produtividade_div">
+      <img class="produtividade_div-img" src="/images/illustration-stay-productive.png" alt="imagem">
+    </div>
+
+   <div>  
+
+    <h2 class="h2">Fique comunicatinha onde estiver.</h2>
+    <p class="p"> O Guardium é uma solução de segurança de dados que pode se adaptar à medida 
+      que o ambiente de ameaças muda, fornecendo visibilidade, conformidade e proteção
+       completas em todo o ciclo de vida da segurança de dados. <br> <br>
+
+      A Fylo Security Guardium é uma plataforma de segurança de dados moderna e 
+      escalável, pronta para atender às demandas dos ambientes atuais em evolução. 
+      Ele protege dados confidenciais e regulamentados em vários ambientes de
+       nuvem ao mesmo tempo em que gerencia as obrigações de conformidade, 
+       descobrindo onde os dados confidenciais residem, criptografando e 
+       monitorando o que é importante e reduzindo o risco das respostas a ameaças.</p>      
+       
+       <a class="sub" href="#">Veja como a Fylo funciona 
+        <img src="/images/icon-arrow.svg" alt="icon-arrow">
+       </a>
+      </div>
+
+   
+
+
+  </section>
 
   <script src="/app/script.js"></script>
 
