--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
    <div>  
 
-    <h2 class="h2">Fique comunicatinha onde estiver.</h2>
-    <p class="p"> O Guardium é uma solução de segurança de dados que pode se adaptar à medida 
+    <h2 class="produtividade_div-text">Fique comunicatinha onde estiver.</h2>
+    <p class="produtividade_div-paragrafo"> O Guardium é uma solução de segurança de dados que pode se adaptar à medida 
       que o ambiente de ameaças muda, fornecendo visibilidade, conformidade e proteção
        completas em todo o ciclo de vida da segurança de dados. <br> <br>
 
@@ -93,16 +93,27 @@
       Ele protege dados confidenciais e regulamentados em vários ambientes de
        nuvem ao mesmo tempo em que gerencia as obrigações de conformidade, 
        descobrindo onde os dados confidenciais residem, criptografando e 
-       monitorando o que é importante e reduzindo o risco das respostas a ameaças.</p>      
-       
+       monitorando o que é importante e reduzindo o risco das respostas a ameaças.</p>  
+      </div>
+
+      <div class="produtividade_div-link">       
        <a class="sub" href="#">Veja como a Fylo funciona 
         <img src="/images/icon-arrow.svg" alt="icon-arrow">
        </a>
-      </div>
+       </div>
+      </div>  
 
-   
+
+  </section>
 
 
+  <section class="acesso_antecipado">
+    <h3 class="acesso_antecipado-text">Tenha acesso agora</h3>
+    <p class="acesso_antecipado-paragrafo">Isso só vai levar um minuto , começando hoje o primeiro mês é gratis e cancela quando quiser .</p>
+    <input class="acesso_antecipado-input" type="text" placeholder="Digite seu e-mail aqui">
+    <a class="acesso_antecipado-link">Comece aqui !</a> 
+
+    
   </section>
 
   <script src="/app/script.js"></script>
