--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
 <link rel="stylesheet" href="./styles/reset.css">
 <link rel="stylesheet" href="./styles/style.css"> 
 </head>
@@ -108,13 +109,45 @@
 
 
   <section class="acesso_antecipado">
-    <h3 class="acesso_antecipado-text">Tenha acesso agora</h3>
-    <p class="acesso_antecipado-paragrafo">Isso só vai levar um minuto , começando hoje o primeiro mês é gratis e cancela quando quiser .</p>
-    <input class="acesso_antecipado-input" type="text" placeholder="Digite seu e-mail aqui">
-    <a class="acesso_antecipado-link">Comece aqui !</a> 
 
+    <h3 class="acesso_antecipado-text">Tenha acesso agora</h3>
+    <p class="acesso_antecipado-paragrafo">Isso só vai levar um minuto , começando hoje o primeiro
+       mês é gratis e cancela quando quiser .</p>  
+    <input class="acesso_antecipado-input" type="text" placeholder="Digite seu e-mail aqui">   
+    <a class="acesso_antecipado-link">Comece aqui !</a> 
+ 
     
   </section>
+
+
+  <footer class="footer">
+
+    <img src="/images/logo.svg" alt="logo">
+    <i class="bi bi-telephone-plus-fill"></i>
+    <span class="numbers">+55 (54) 544-888-777</span>
+    <i class="bi bi-envelope-at-fill"></i>
+    <span>exemplo@fylo.com</span>
+
+
+    <ul class="block">
+      <li class="sub-block">Sobre nós</li>
+      <li>Empregos</li>
+      <li>Site</li>
+      <li>Blogs</li>
+    </ul>
+  
+    <ul class="block">
+      <li class="sub-block">Contratos</li>
+      <li>Termos</li>
+      <li>Privacidade</li>  
+    </ul>
+
+    <i class="bi bi-whatsapp"></i>
+    <i class="bi bi-twitter-x"></i>
+    <i class="bi bi-instagram"></i>
+
+
+  </footer>
 
   <script src="/app/script.js"></script>
 
