--- a/index.html
+++ b/index.html
@@ -122,30 +122,41 @@
 
   <footer class="footer">
 
-    <img src="/images/logo.svg" alt="logo">
-    <i class="bi bi-telephone-plus-fill"></i>
-    <span class="numbers">+55 (54) 544-888-777</span>
-    <i class="bi bi-envelope-at-fill"></i>
-    <span>exemplo@fylo.com</span>
+    <img class="footer_logo" src="/images/logo.svg" alt="logo">
 
+    <div class="footer_phone">
+      <i class="bi bi-telephone-plus-fill"></i>
+      <span class="numbers">+55 (54) 544-888-777</span>
+    </div>
 
-    <ul class="block">
-      <li class="sub-block">Sobre nós</li>
+    <div class="footer_email">
+      <i class="bi bi-envelope-at-fill"></i>
+      <span>exemplo@fylo.com</span>
+    </div>
+ 
+
+   <div class="footer_div_list">
+    <ul class="footer_list">
+      <li class="footer_list_strong"><strong>Sobre nós</strong></li>
       <li>Empregos</li>
       <li>Site</li>
       <li>Blogs</li>
     </ul>
-  
-    <ul class="block">
-      <li class="sub-block">Contratos</li>
+  </div>
+
+  <div class="footer_div_list">
+    <ul class="footer_list">
+      <li class="footer_list_strong">Contratos</li>
       <li>Termos</li>
       <li>Privacidade</li>  
     </ul>
+  </div>
 
+  <div class="footer_icons">
     <i class="bi bi-whatsapp"></i>
     <i class="bi bi-twitter-x"></i>
     <i class="bi bi-instagram"></i>
-
+  </div>
 
   </footer>
 
