--- a/index.html
+++ b/index.html
@@ -48,25 +48,25 @@
 
       <div class="servicos_main-div-grid">
         <img class="servicos_main-div-img" src="/images/icon-access-anywhere.svg" alt="computador">
-        <h3 class="h3">Acesse seus arquivos em qualquer lugar.</h3>      
+        <h3 class="servicos_main-div-text">Acesse seus arquivos em qualquer lugar.</h3>      
         <p class="p">Você consigue acessar sesus arquivos pelo celula ,teblet ou desktop.</p>
      </div>
 
       <div  class="servicos_main-div-grid">
         <img  class="servicos_main-div-img"src="/images/icon-security.svg" alt="Shild">
-        <h3 class="h3">A segurança que você pode confiar.</h3>     
+        <h3 class="servicos_main-div-text">A segurança que você pode confiar.</h3>     
         <p class="p">Segurança 24 horas por dia com os profissionais mais capacitados do mercado.</p>
       </div>
        
       <div  class="servicos_main-div-grid">
         <img class="servicos_main-div-img" src="/images/icon-collaboration.svg" alt="Check">
-        <h3 class="h3">Segurança em compartilhamento de dados.</h3>     
+        <h3 class="servicos_main-div-text">Segurança em compartilhamento de dados.</h3>     
         <p class="p">Nossa segurança possui criptografia ponta a ponta , compartilhamento seguro e sem risco.</p>
       </div>
 
     <div  class="servicos_main-div-grid">
       <img class="servicos_main-div-img" src="/images/icon-any-file.svg" alt="folder">
-      <h3 class="h3">Armazene qualquer coisa.</h3>      
+      <h3 class="servicos_main-div-text">Armazene qualquer coisa.</h3>      
       <p class="p">Salve sesus dados sem medo de perde-los , nosso sitema de nuvem possui asmais novas tecnologias.</p>
       </li>
     </div>
