--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
    <div>  
 
     <h2 class="produtividade_div-text">Fique comunicatinha onde estiver.</h2>
-    <p class="produtividade_div-paragrafo"> O Guardium é uma solução de segurança de dados que pode se adaptar à medida 
-      que o ambiente de ameaças muda, <br>
-       fornecendo visibilidade, conformidade e proteção
-       completas em todo o ciclo de vida da segurança de dados.</p> <br> <br>
+    <p class="produtividade_div-paragrafo"> O Guardium é uma solução 
+      de segurança de dados que pode se adaptar à medida <br>
+      que o ambiente de ameaças muda,fornecendo visibilidade,<br> 
+      conformidade e proteção completas em todo o ciclo de vida<br>
+       da segurança de dados.</p>
       
        <p class="produtividade_div-paragrafo">
-      A Fylo Security Guardium é uma plataforma de segurança de dados moderna e 
-      escalável, pronta para atender às demandas <br>
+      A Fylo Security Guardium é uma plataforma de segurança de dados 
+      moderna e escalável, pronta para atender às demandas <br>
        dos ambientes atuais em evolução. 
 
-      Ele protege dados confidenciais e regulamentados em vários ambientes de
-       nuvem ao <br>
-       mesmo tempo em que gerencia as obrigações de conformidade, 
+      Ele protege dados confidenciais e regulamentados em vários ambientes de <br>
+       nuvem ao mesmo tempo em que gerencia as obrigações de conformidade, <br>
        descobrindo onde os dados confidenciais residem, <br>
-       criptografando e  monitorando  que é importante e reduzindo o risco
+       criptografando e  monitorando  que é importante e reduzindo o risco <br>
         das respostas a ameaças.</p>  
       </div>
 
@@ -120,11 +120,16 @@
 
 
   <section class="acesso_antecipado">
+
+    <div class="acesso_antecipado-main-div">
+
     <div class="acesso_antecipado-div-text"> 
        <h3 class="acesso_antecipado-text">Tenha acesso agora</h3>
        <p class="acesso_antecipado-paragrafo">Isso só vai levar um minuto , começando hoje o primeiro
        mês é gratis e cancela quando quiser .</p> 
     </div>
+
+    <div>
      
     <div class="acesso_antecipado-div-imput">
        <input class="acesso_antecipado-input" type="text" placeholder="Digite seu e-mail aqui">   
@@ -133,6 +138,12 @@
    <div class="acesso_antecipado-div-link"> 
      <a class="acesso_antecipado-link">Comece aqui !</a> 
   </div> 
+
+</div>
+
+
+</div>
+
   </section>
 
 
