--- a/index.html
+++ b/index.html
@@ -113,36 +113,27 @@
        </a>
        </div>
 
-      </div>  
+      </div> 
+
+  </section>  
 
 
-  </section>
 
 
   <section class="acesso_antecipado">
 
-    <div class="acesso_antecipado-main-div">
-
-    <div class="acesso_antecipado-div-text"> 
-       <h3 class="acesso_antecipado-text">Tenha acesso agora</h3>
-       <p class="acesso_antecipado-paragrafo">Isso só vai levar um minuto , começando hoje o primeiro
-       mês é gratis e cancela quando quiser .</p> 
-    </div>
-
-    <div>
-     
-    <div class="acesso_antecipado-div-imput">
-       <input class="acesso_antecipado-input" type="text" placeholder="Digite seu e-mail aqui">   
-   </div>
-
-   <div class="acesso_antecipado-div-link"> 
-     <a class="acesso_antecipado-link">Comece aqui !</a> 
+    <div class="acesso_antecipado-div-text">     
+      <h3 class="acesso_antecipado-text">Tenha acesso agora</h3>
+      <p class="acesso_antecipado-paragrafo">Isso só vai levar um minuto , começando hoje o primeiro
+       mês é gratis e cancela quando quiser. 
+      </p> 
+  </div> 
+ 
+    <div class="acesso_antecipado-div-btns">
+      <input class="acesso_antecipado-input" type="text" placeholder="Digite seu e-mail aqui">   
+      <a class="acesso_antecipado-link">Comece aqui !</a> 
   </div> 
 
-</div>
-
-
-</div>
 
   </section>
 
