--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
 
     <div class="acesso_antecipado-div-text">     
       <h3 class="acesso_antecipado-text">Tenha acesso agora</h3>
-      <p class="acesso_antecipado-paragrafo">Isso só vai levar um minuto , começando hoje o primeiro
-       mês é gratis e cancela quando quiser. 
+      <p class="acesso_antecipado-paragrafo">Leva apenas um minuto para se inscrever e 
+        nosso nível inicial gratuito é extremamente generoso. Se você tiver alguma 
+        dúvida, <br> nossa equipe de suporte terá prazer em ajudá-lo. 
       </p> 
   </div> 
  
@@ -140,6 +141,8 @@
 
   <footer class="footer">
 
+    <div class="footer-contact">
+
     <img class="footer_logo" src="/images/logo.svg" alt="logo">
 
     <div class="footer_phone">
@@ -151,7 +154,8 @@
       <i class="bi bi-envelope-at-fill"></i>
       <span>exemplo@fylo.com</span>
     </div>
- 
+
+  </div>
 
    <div class="footer_div_list">
     <ul class="footer_list">
